--- a/src/VideoPlayer/VideoPlayer.ui
+++ b/src/VideoPlayer/VideoPlayer.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>854</width>
-    <height>520</height>
+    <width>852</width>
+    <height>515</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,7 +15,7 @@
   </property>
   <property name="styleSheet">
    <string notr="true">#VideoPlayerClass{
-background-color: rgb(53, 53, 53);
+background-color: rgb(0, 0, 0);
 }
 QPushButton:!hover
 {
@@ -34,13 +34,13 @@ QPushButton:hover
 	font: 75 12pt &quot;黑体&quot;;
 }
 #centralWidget{
-background-color: rgb(53, 53, 53);
+background-color: rgb(0, 0, 0);
 }
-#closeButton
+#closeButton,#maxButton,#minButton
 {
 font: 75 11pt &quot;等线&quot;;
 color: rgb(255, 255, 255);
-background-color: rgb(53, 53, 53);
+background-color: rgb(0, 0, 0);
 }
 
 #playButton{background-color: rgba(255, 255, 255,0);}
@@ -61,21 +61,11 @@ background-color: rgb(53, 53, 53);
 </string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="VideoOpenGLWidget" name="vowScreen">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>20</y>
-      <width>600</width>
-      <height>400</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>20</y>
+      <x>500</x>
+      <y>470</y>
       <width>93</width>
       <height>28</height>
      </rect>
@@ -87,8 +77,8 @@ background-color: rgb(53, 53, 53);
    <widget class="QPushButton" name="pauseButton">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>440</y>
+      <x>360</x>
+      <y>470</y>
       <width>31</width>
       <height>28</height>
      </rect>
@@ -100,8 +90,8 @@ background-color: rgb(53, 53, 53);
    <widget class="QPushButton" name="playButton">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>440</y>
+      <x>400</x>
+      <y>470</y>
       <width>31</width>
       <height>28</height>
      </rect>
@@ -113,8 +103,8 @@ background-color: rgb(53, 53, 53);
    <widget class="QSlider" name="playSlider">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>420</y>
+      <x>110</x>
+      <y>430</y>
       <width>601</width>
       <height>22</height>
      </rect>
@@ -126,21 +116,56 @@ background-color: rgb(53, 53, 53);
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
-   <widget class="QPushButton" name="closeButton">
+   <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>820</x>
+      <x>790</x>
       <y>0</y>
-      <width>31</width>
-      <height>28</height>
+      <width>62</width>
+      <height>25</height>
      </rect>
     </property>
-    <property name="text">
-     <string>X</string>
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <item>
+      <widget class="QPushButton" name="minButton">
+       <property name="text">
+        <string>一</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="maxButton">
+       <property name="text">
+        <string>口</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="closeButton">
+       <property name="text">
+        <string>X</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="VideoOpenGLWidget" name="vowScreen">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>852</width>
+      <height>520</height>
+     </rect>
     </property>
    </widget>
+   <zorder>vowScreen</zorder>
+   <zorder>pushButton</zorder>
+   <zorder>pauseButton</zorder>
+   <zorder>playButton</zorder>
+   <zorder>playSlider</zorder>
+   <zorder>horizontalLayoutWidget</zorder>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
@@ -266,6 +291,38 @@ background-color: rgb(53, 53, 53);
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>minButton</sender>
+   <signal>clicked()</signal>
+   <receiver>VideoPlayerClass</receiver>
+   <slot>showMinimized()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>751</x>
+     <y>15</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>748</x>
+     <y>-28</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>maxButton</sender>
+   <signal>clicked()</signal>
+   <receiver>VideoPlayerClass</receiver>
+   <slot>fullResetScreen()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>803</x>
+     <y>12</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>806</x>
+     <y>-25</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>openVideo()</slot>
@@ -274,5 +331,6 @@ background-color: rgb(53, 53, 53);
   <slot>sliderRelease()</slot>
   <slot>sliderPress()</slot>
   <slot>setPos(int)</slot>
+  <slot>fullResetScreen()</slot>
  </slots>
 </ui>
